apps/production/apps/vela-s3/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: s3proxy
  namespace: vela-s3
  labels:
    app.kubernetes.io/name: s3proxy
    app.kubernetes.io/part-of: home-infra
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: s3proxy
  ports:
    - name: s3
      port: 80
      targetPort: 80
      protocol: TCP
